--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1117,6 +1117,7 @@ The operations on a set can always be composed by taking as input the output of 
 \end{warning}
 
 \begin{definition}
+	\label{def:operad}
 	An \textbf{operad} \(\mathcal{O}\) in monoidal category \(\mathcal{C}\) consists of:
 
 	\begin{itemize}
